--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "devDependencies": {
     "@parcel/config-webextension": "^2.7.0",
     "@types/webextension-polyfill": "^0.9.1",
+    "autoprefixer": "^10.4.13",
     "parcel": "^2.7.0",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.1",
     "typescript": "^4.8.4",
     "web-ext": "^7.2.0",
     "webextension-polyfill": "^0.10.0"
@@ -15,11 +18,8 @@
     "@types/firefox": "^0.0.31",
     "@types/jest": "^29.1.2",
     "@types/node": "^18.8.3",
-    "@types/react": "^18.0.21",
-    "@types/react-dom": "^18.0.6",
-    "antd": "^4.23.4",
+    "babel-preset-solid": "^1.6.0",
     "eslint": "^8.24.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "solid-js": "^1.6.0"
   }
 }
