--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,12 @@
 {
     "compilerOptions": {
+        "strict": true,
+        "forceConsistentCasingInFileNames": true,
         "module": "ESNext",
         "moduleResolution": "Node",
         "target": "ES2020",
-        "jsx": "react",
+        "jsx": "preserve",
+        "jsxImportSource": "solid-js",
         "strictNullChecks": true,
         "strictFunctionTypes": true
     },
